Closed
Bug 964281
Opened 11 years ago
Closed 11 years ago
Hang when opening log file on http://nightly.mpc-hc.org/
Categories
(Core :: Layout, defect)
Tracking
()
VERIFIED
FIXED
mozilla30
People
(Reporter: Virtual, Assigned: smontagu)
References
()
Details
(Keywords: hang, nightly-community, regression)
Attachments
(1 file)
4.89 KB,
patch
|
roc
:
review+
lsblakk
:
approval-mozilla-aurora+
lsblakk
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
1. Go to http://nightly.mpc-hc.org/
2. Click on log file (it's on the bottom)
3. Enjoy the hang
Virtual_ManPL [:Virtual] 🇵🇱 - (please needinfo? me - so I will see your comment/reply/question/etc.)
Reporter
|
||
Updated•11 years ago
|
Keywords: regression,
regressionwindow-wanted
Comment 1•11 years ago
|
||
Stack on hang:bp-b42708d4-a189-43c8-b087-2b52b2140127
Regression window(m-c)
Good:
http://hg.mozilla.org/mozilla-central/rev/d58ab6f6ca0a
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:28.0) Gecko/20100101 Firefox/28.0 ID:20131117145336
Bad:
http://hg.mozilla.org/mozilla-central/rev/59f6274ce8f1
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:28.0) Gecko/20100101 Firefox/28.0 ID:20131118025341
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=d58ab6f6ca0a&tochange=59f6274ce8f1
Regression window(m-i)
Good:
http://hg.mozilla.org/integration/mozilla-inbound/rev/6f5bbe846139
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:28.0) Gecko/20100101 Firefox/28.0 ID:20131116233338
Bad:
http://hg.mozilla.org/integration/mozilla-inbound/rev/bdf16bdfce5a
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:28.0) Gecko/20100101 Firefox/28.0 ID:20131117023737
Pushlog:
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=6f5bbe846139&tochange=bdf16bdfce5a
Regressed by: Bug 646359 or Bug 936935
Status: UNCONFIRMED → NEW
status-firefox27:
--- → unaffected
tracking-firefox28:
--- → ?
tracking-firefox29:
--- → ?
Component: Untriaged → Layout
Ever confirmed: true
Keywords: regressionwindow-wanted → hang
Product: Firefox → Core
Updated•11 years ago
|
Version: Trunk → 28 Branch
Updated•11 years ago
|
Comment 2•11 years ago
|
||
Can you have a look at this since you landed the patches in the regression window?
Flags: needinfo?(smontagu)
Assignee | ||
Updated•11 years ago
|
Assignee: nobody → smontagu
Flags: needinfo?(smontagu)
Comment 3•11 years ago
|
||
In local build
Last Good: ec7b5c159c31
First Bad: bdf16bdfce5a
Triggered by: bdf16bdfce5a Simon Montagu — Optimize bidi resolution on blocks without mixed-direction text. Bug 646359, r=roc
No longer blocks: 936935
Assignee | ||
Updated•11 years ago
|
Flags: needinfo?(matspal)
Updated•11 years ago
|
Flags: needinfo?(matspal)
Assignee | ||
Comment 6•11 years ago
|
||
Attachment #8375378 -
Flags: review?(roc)
Attachment #8375378 -
Flags: review?(roc) → review+
Updated•11 years ago
|
status-firefox28:
--- → affected
status-firefox29:
--- → affected
status-firefox30:
--- → affected
tracking-firefox30:
--- → +
Assignee | ||
Comment 7•11 years ago
|
||
Comment 8•11 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/b732738b75f8
(for uplift, please get the bug number correct in the commit message; now the sheriff resolved bug 964821 instead)
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
Comment 9•11 years ago
|
||
Can this get uplift? We're taking our last landings to FF28 beta today if tracked & low risk so please nominate (or comment as to not nominating) if this is safe to take.
Flags: needinfo?(smontagu)
Assignee | ||
Comment 10•11 years ago
|
||
Comment on attachment 8375378 [details] [diff] [review]
Updated patch
[Approval Request Comment]
Bug caused by (feature/regressing bug #): 646359
User impact if declined: Possible hangs with large text files containing bidirectional text
Testing completed (on m-c, etc.): baked on m-c since 2014-02-18
Risk to taking this patch (and alternatives if risky): Should be minimal risk
String or IDL/UUID changes made by this patch: N/A
Attachment #8375378 -
Flags: approval-mozilla-beta?
Attachment #8375378 -
Flags: approval-mozilla-aurora?
Flags: needinfo?(smontagu)
Updated•11 years ago
|
Attachment #8375378 -
Flags: approval-mozilla-beta?
Attachment #8375378 -
Flags: approval-mozilla-beta+
Attachment #8375378 -
Flags: approval-mozilla-aurora?
Attachment #8375378 -
Flags: approval-mozilla-aurora+
Comment 11•11 years ago
|
||
Comment 12•11 years ago
|
||
And a follow-up because nsTextFrame.h wasn't actually included in the files where the new state bit was being used :)
https://hg.mozilla.org/releases/mozilla-aurora/rev/1888bbfc5726
https://hg.mozilla.org/releases/mozilla-beta/rev/5d2d60f3cb37
Comment 13•11 years ago
|
||
Updated•11 years ago
|
status-b2g-v1.3:
--- → fixed
status-b2g-v1.4:
--- → fixed
Comment 14•11 years ago
|
||
Reproduced with Nightly from 2014-01-20 by using STR from comment 0.
Verified as fixed with Firefox 28 beta 9 (Build ID: 20140306171728) on Windows 7 64bit:
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:28.0) Gecko/20100101 Firefox/28.0
Comment 15•11 years ago
|
||
Verified fixed 29.0a2 (2014-03-10), 30.0a1 (2014-03-09) Win 7 x64.
Status: RESOLVED → VERIFIED
Keywords: verifyme
Updated•11 years ago
|
status-b2g-v1.3T:
--- → fixed
Virtual_ManPL [:Virtual] 🇵🇱 - (please needinfo? me - so I will see your comment/reply/question/etc.)
Reporter
|
||
Updated•8 years ago
|
Keywords: nightly-community
Virtual_ManPL [:Virtual] 🇵🇱 - (please needinfo? me - so I will see your comment/reply/question/etc.)
Reporter
|
||
Updated•7 years ago
|
QA Contact: Virtual
You need to log in
before you can comment on or make changes to this bug.
Description
•