Bug 964281 - Fix a hang by using a dedicated state bit instead of overloading NS_FRAME_IS_DIRTY. r=roc, a=lsblakk